kubernetes/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  selector:
    matchLabels:
      app: python-app
  replicas: 2
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: my-own-app
        image: seger/app-fixed-link:0.1
        volumeMounts:
            - mountPath: /test-dir
              name: test-volume
        securityContext:
          runAsUser: 1000
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
              drop:
              - "all"
              add:
              - "NET_BIND_SERVICE"
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 8080
      volumes:
      - name: test-volume
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  namespace: kubernetes-dashboard
  name: my-app
spec:
  selector:
    app: python-app
  ports:
    - targetPort: 8080
      port: 8080
