kubernetes/deployment-mongo-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
      - name: mongo-db
        image: mongo
        volumeMounts:
        - mountPath: "/data/db"
          name: mydb
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
      volumes:
      - name: mydb
        persistentVolumeClaim:
          claimName: pvc-mongodb
---
apiVersion: v1
kind: Service
metadata:
  name: my-mongo-db-service
spec:
  selector:
    app: mongo-db
  ports:
  - port: 27017
    targetPort: 27017
