kubernetes/deployment-mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-mongo-express
  template:
    metadata:
      labels:
        app: my-mongo-express
    spec:
      containers:
      - name: my-mongo-express
        image: mongo-express
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: my-mongo-express-service
spec:
  selector:
    app: my-mongo-express
  type: LoadBalancer
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30000
